fix: 修复 changeset 生成格式错误，添加命令状态反馈机制

--- a/.changeset/1755238619-pr--.md
+++ b/.changeset/1755238619-pr--.md
@@ -1,7 +1,7 @@
 ---
-"@deepractice-ai/github-workflows": 
+"@deepractice-ai/github-workflows": patch
 ---
 
+Node OpenSource Workflow 初始实现
 
-
-Contributed by @ via #
+Contributed by @deepracticexs via #19
